--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,38 @@ flutter:
     - assets/images/icons/divider.svg
     - assets/images/icons/fullprogressreport.svg
     - assets/images/icons/aboutthem.svg
+    - assets/images/icons/horizline.svg
+    - assets/images/icons/selecttext.svg
+    - assets/images/surveymemes/unknown.png
+    - assets/images/surveymemes/unknown-2.png
+    - assets/images/surveymemes/unknown-3.png
+    - assets/images/surveymemes/unknown-4.png
+    - assets/images/surveymemes/unknown-5.png
+    - assets/images/surveymemes/unknown-6.png
+    - assets/images/surveymemes/unknown-7.png
+    - assets/images/surveymemes/unknown-8.png
+    - assets/images/surveymemes/unknown-9.png
+    - assets/images/surveymemes/unknown-10.png
+    - assets/images/surveymemes/unknown-11.png
+    - assets/images/surveymemes/unknown-12.png
+    - assets/images/surveymemes/unknown-13.png
+    - assets/images/surveymemes/unknown-14.png
+    - assets/images/surveymemes/unknown-15.png
+    - assets/images/surveymemes/unknown-16.png
+    - assets/images/surveymemes/unknown-17.png
+    - assets/images/surveymemes/unknown-18.png
+    - assets/images/surveymemes/unknown-19.png
+    - assets/images/surveymemes/image.png
+    - assets/images/icons/selectavatar.svg
+    - assets/images/avatars/daddy2.jpg
+    - assets/images/avatars/daddy3.jpg
+    - assets/images/avatars/daddy4.jpg
+    - assets/images/avatars/mommy1.jpg
+    - assets/images/avatars/mommy2.jpg
+    - assets/images/avatars/mommy4.jpg
+    - assets/images/avatars/mommy5.jpg
+    - assets/images/avatars/mommy6.jpg
+
     # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -142,6 +174,12 @@ flutter:
     - family: Eudoxussansbold
       fonts:
         - asset: fonts/EudoxusSans-Bold.ttf
+    - family: LarsseitMed
+      fonts:
+        - asset: fonts/Larsseit-Medium.otf
+    - family: TiemposMed
+      fonts:
+        - asset: fonts/TestTiemposHeadline-MediumItalic.otf
 
           # fonts:
   #   - family: Schyler
